# mcp-sniffer

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: docker-compose.yml
.devcontainer/mcp-sniffer-container/: Dockerfile  devcontainer.json
.devcontainer/nginx-container/: default.conf
.devcontainer/react-container/: Dockerfile  start.sh
.github/workflows/: create-release.yaml  test-suite.yml
backend/: pyproject.toml
backend/mcp_sniffer/: __main__.py  config.py  webui.py
backend/mcp_sniffer/parsers/: chunk.py  sse_message.py
backend/src/: config.py  connections.py  main.py  proxy.py  webui.py
backend/src/parsers/: base.py  request.py  response.py
frontend/: .prettierignore  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  ConnectionDetails.tsx  ConnectionsList.tsx  ShowHeaders.tsx  ShowRequestRaw.tsx  ShowResponseChunks.tsx  ShowResponseRaw.tsx  ShowResponseSSE.tsx  TabbedInterface.tsx  connection.ts
mcp_sniffer/: __init__.py  __main__.py  config.py  connection_logger.py  connections.py  main.py  proxy.py  webui.py
mcp_sniffer/parsers/: request.py  response.py  sse_message.py
tests/: test_config.py  test_fixtures.py  test_get.py  test_post.py
tests/fixtures/delete/simple/: connection.json  request.txt  response.txt
tests/fixtures/delete/with_payload/: connection.json  request.txt  response.txt
tests/fixtures/empty/both/: connection.json
tests/fixtures/get/simple/: connection.json  response.txt
tests/fixtures/get/sse_chunked/: connection.json  response.txt
tests/fixtures/get/sse_chunked_with_id/: connection.json  request.txt  response.txt
tests/fixtures/get/sse_simple/: connection.json  response.txt
tests/fixtures/head/simple/: connection.json  request.txt  response.txt
tests/fixtures/mcp_http_sse/0_main_sse_get_session/: connection.json  request.txt  (+1 more)
tests/utils/: stream.py
(+44 files in other folders)
