[project]
name = "mcp-sniffer"
version = "0.1.0"
description = "MCP Sniffer is a network traffic inspector for MCP clients and servers. It runs as a reverse proxy between the client and server, monitoring all communication between them."
authors = [
    {name = "Shiv Deepak",email = "shivdeepak@gmail.com"}
]
license = {text = "GPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coloredlogs>=15.0.1",
    "httptools>=0.6.4",
    "pydantic>=2.11.3",
    "starlette>=0.46.2",
    "uvicorn>=0.34.1",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mcp-sniffer = "mcp_sniffer.__main__:main"

[tool.poetry]
include = [
    { path = "mcp_sniffer/frontend/**/*", format = "sdist" },
    { path = "mcp_sniffer/frontend/**/*", format = "wheel" }
]
