[project]
name = "mcp-sniffer"
version = "0.1.3"
description = "MCP Sniffer captures network traffic between MCP clients and servers and displays it in a web UI."
authors = [
    {name = "Shiv Deepak",email = "shivdeepak@gmail.com"}
]
license = {text = "GPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "coloredlogs>=15.0.1",
    "httptools>=0.6.4",
    "pydantic>=2.11.3",
    "starlette>=0.46.2",
    "uvicorn>=0.34.1",
]

[project.urls]
Source = "https://github.com/shivdeepak/mcp-sniffer"
Tracker = "https://github.com/shivdeepak/mcp-sniffer/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mcp-sniffer = "mcp_sniffer.__main__:main"

[tool.poetry]
include = [
    { path = "mcp_sniffer/frontend/**/*", format = "sdist" },
    { path = "mcp_sniffer/frontend/**/*", format = "wheel" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
